--- a/index.html
+++ b/index.html
@@ -7,6 +7,41 @@
     <link rel="stylesheet" href="lab6style.css">
 </head>
 <body>
+    <main class="cardcontainer">
+        <section class="card">
+            <img src="https://github.com/sumayamohammad/Lab-6/blob/main/Images/NYC.jpg?raw=true" alt="image of NYC">
+            <h3><a href="" class="cardlink">New York City</a></h3>
+        </section>
+
+        <section class="card">
+            <img src="https://github.com/sumayamohammad/Lab-6/blob/main/Images/LA.jpg?raw=true" alt="image of LA">
+            <h3><a href="" class="cardlink">Los Angeles</a></h3>
+        </section>
+    </main>
+
+    <main class="cardcontainer">
+        <section class="card">
+            <h3><a href="" class="cardlink">New York City</a></h3>
+            <img src="https://github.com/sumayamohammad/Lab-6/blob/main/Images/NYC.jpg?raw=true" alt="image of NYC">
+            <p class="cardinfo">New York, often called New York City
+            or NYC, is the most populous city in the United States, 
+            located at the southern tip of New York State on one of the 
+            world's largest natural harbors. The city comprises five boroughs, 
+            each coextensive with a respective county. </p>
+        </section>
+
+        <section class="card">
+            <img src="https://github.com/sumayamohammad/Lab-6/blob/main/Images/LA.jpg?raw=true" alt="image of LA">
+            <h3>Los Angeles</h3>
+            <p class="cardinfo">New York, often called New York City
+            or NYC, is the most populous city in the United States, 
+            located at the southern tip of New York State on one of the 
+            world's largest natural harbors. The city comprises five boroughs, 
+            each coextensive with a respective county.</p>
+            <a href="" class="cardfooterlink">More info about LA</a>
+        </section>
+    </main>
+
     <h2>Navigation tabs</h2>
     <h3>Vertical navigation tabs</h3>
     <ul class="verticaltabs">
