--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="https://github.com/sumayamohammad/Lab-6/blob/main/Images/NYC.jpg?raw=true" alt="New York City">
             <div class="card-content">
                 <h3><a href="#" class="card-link">New York City</a></h3>
-                <p class="card-info">New York City is the most populous city in the United States, located at the southern tip of New York State.</p>
+                <p class="card-info">The most populous city in the U.S., NYC is located at the southern tip of New York State.</p>
             </div>
         </div>
 
@@ -22,7 +22,7 @@
             <img src="https://github.com/sumayamohammad/Lab-6/blob/main/Images/LA.jpg?raw=true" alt="Los Angeles">
             <div class="card-content">
                 <h3><a href="#" class="card-link">Los Angeles</a></h3>
-                <p class="card-info">Los Angeles is a sprawling Southern California city and the center of the nation’s film and television industry.</p>
+                <p class="card-info">The entertainment capital of the world, Los Angeles is known for Hollywood and sunny weather.</p>
             </div>
         </div>
     </section>
